<resources>
    <string name="app_name">我的app</string>
    <string name="text_btn_login">登  录</string>
    <string name="text_btn_send_code">获取验证码</string>

    <string name="again_out">再按一次退出</string>
    <string name="text_loading_login">正在登录..</string>

    <!--主页面-->
    <string name="tab_home1">首页</string>
    <string name="tab_home2">商城</string>
    <string name="tab_category">商品分类</string>
    <string name="tab_shop">购物车</string>
    <string name="tab_mine">个人中心</string>
    <string name="tab_mall">商城</string>
    <string name="tab_study">学习中心</string>

    <!--登录页-->
    <string name="login_username">手机账号：</string>
    <string name="login_password">账号密码：</string>
    <string name="login_code">验证码：</string>
    <string name="login_register">账号注册</string>
    <string name="login_by_password">密码登录</string>
    <string name="login_by_code">验证码登录</string>
    <string name="bar_title_forgot_password">忘记密码</string>
    <string name="bar_title_bind_password">绑定手机</string>

    <string name="bar_title_retrieve_password">找回密码</string>
    <string name="bar_title_retrieve_pay_password">找回支付密码</string>
    <string name="bar_title_set_password">设置密码</string>
    <string name="bar_title_set_pay_password">设置支付密码</string>
    <string name="text_btn_modify">修  改</string>

    <!--注册页-->
    <string name="bar_title_register">注册</string>
    <string name="register_name">昵称：</string>
    <string name="register_sex">性别：</string>
    <string name="register_phone">手机号码：</string>
    <string name="register_code">验证码：</string>
    <string name="register_password">密码：</string>
    <string name="register_password_">确认密码：</string>
    <string name="register_invite">邀请码：</string>
    <string name="warning_input_correct_phone">请输入正确的手机号</string>
    <string name="reset_pwd_old">旧密码：</string>
    <string name="reset_pwd_new">新密码：</string>
    <string-array name="sex">
        <item>男</item>
        <item>女</item>
    </string-array>

    <!--输入框hint文本-->
    <string name="hint_input_phone">输入手机号</string>
    <string name="hint_input_password">输入密码</string>
    <string name="hint_input_password_again">再次输入密码</string>
    <string name="hint_input_old_password">输入旧密码</string>
    <string name="hint_input_new_password">输入新密码</string>
    <string name="hint_input_code">输入验证码</string>
    <string name="hint_input_nickname">请输入您的昵称</string>
    <string name="hint_input_invite">输入邀请码（选填）</string>
    <string name="hint_select_sex">请选择性别</string>
    <string name="hint_input_username">输入用户名</string>
    <string name="hint_feedback_content">请输入您的意见或者建议</string>
    <string name="hint_feedback_contact">QQ/电话/邮箱，方便我们联系</string>
    <string name="hint_search_product">搜索商品</string>
    <string name="hint_search_study">请输入车辆品牌/车型/遥控型号</string>

    <string name="text_loading_sync">正在同步信息..</string>
    <string name="prompt_regex_nickname">昵称格式为中文+数字组合，长度1到10</string>

    <string name="take_photo">拍照</string>
    <string name="choose_from_album">从相册中选择</string>

    <!--设置页面-->
    <string name="bar_title_settings">设置</string>
    <string name="settings_text_01">我的收货地址</string>
    <string name="settings_text_02">账户与安全</string>
    <string name="settings_text_03">支付设置</string>
    <string name="settings_text_04">消息通知</string>
    <string name="settings_text_05">隐私</string>
    <string name="settings_text_06">通用</string>
    <string name="settings_text_07">帮助中心</string>
    <string name="settings_text_08">问题反馈</string>
    <string name="settings_text_09">关于锁友圈</string>
    <string name="settings_logout">退出登录</string>
    <string name="text_loading_normal">正在加载..</string>

    <string name="text_btn_submit">提  交</string>

</resources>
