<?xml version="1.0" encoding="utf-8"?>
<com.tool.cs.common.widget.shape.ShapeLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/dp_24"
    android:layout_marginRight="@dimen/dp_24"
    android:layout_marginBottom="@dimen/dp_30"
    android:divider="@drawable/shape_padding_dp22"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:paddingLeft="@dimen/dp_20"
    android:paddingRight="@dimen/dp_20"
    android:paddingBottom="36.5dp"
    android:showDividers="middle"
    app:shapeCornersRadius="@dimen/dp_5"
    app:shapeSelectorNormalColor="@color/white"
    tools:ignore="RtlHardcoded">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20.5dp"
        android:layout_marginBottom="@dimen/dp_6"
        android:includeFontPadding="false"
        android:textColor="#244C73"
        android:textSize="@dimen/sp_18"
        android:textStyle="bold"
        tools:text="@string/bar_title_register" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_item_height">

        <TextView
            style="@style/Content_sp15_normal"
            android:layout_gravity="center_vertical"
            android:gravity="end"
            android:minWidth="@dimen/dp_85"
            android:text="@string/login_username" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/et_phone"
            style="@style/LoginEtStyle"
            android:layout_height="match_parent"
            android:hint="@string/hint_input_phone"
            android:imeOptions="actionNext"
            android:inputType="phone"
            android:paddingStart="@dimen/dp_85"
            android:paddingLeft="@dimen/dp_85"
            tools:ignore="RtlSymmetry" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_item_height">

        <TextView
            style="@style/Content_sp15_normal"
            android:layout_gravity="center_vertical"
            android:gravity="end"
            android:minWidth="@dimen/dp_85"
            android:text="@string/register_code" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/et_code"
            style="@style/LoginEtStyle"
            android:layout_height="match_parent"
            android:hint="@string/hint_input_code"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:paddingStart="@dimen/dp_85"
            android:paddingLeft="@dimen/dp_85"
            tools:ignore="RtlSymmetry" />

        <com.tool.cs.common.widget.ComplexView
            android:id="@+id/cv_send_code"
            style="@style/Content_sp12_normal"
            android:layout_height="@dimen/dp_27"
            android:layout_gravity="center_vertical|end"
            android:layout_marginEnd="8.5dp"
            android:layout_marginRight="8.5dp"
            android:paddingLeft="@dimen/dp_6"
            android:paddingTop="@dimen/dp_3"
            android:paddingRight="@dimen/dp_6"
            android:paddingBottom="@dimen/dp_3"
            android:text="@string/text_btn_send_code"
            android:textColor="@color/white"
            app:cvCornersRadius="@dimen/dp_30"
            app:cvDisableBgColor="@color/colorBtnDisableBg"
            app:cvNormalBgColor="@color/colorBtnNormalBg"
            app:cvPressedBgColor="@color/colorBtnNormalBg"
            app:cvSelector="standard" />
    </FrameLayout>

    <com.tool.cs.common.widget.ComplexView
        android:id="@+id/cv_confirm"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:layout_marginTop="12.5dp"
        android:enabled="false"
        android:text="@string/text_btn_modify"
        android:textColor="#fff"
        android:textSize="15sp"
        app:cvCornersRadius="200dp"
        app:cvDisableBgColor="@color/colorBtnDisableBg"
        app:cvNormalBgColor="@color/colorBtnNormalBg"
        app:cvPressedBgColor="@color/colorBtnPressBg"
        app:cvSelector="standard"
        app:layout_constraintTop_toBottomOf="@id/ll_container" />
</com.tool.cs.common.widget.shape.ShapeLinearLayout>