<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:divider="@drawable/shape_horizontal_line"
            android:orientation="vertical"
            android:showDividers="middle">

            <FrameLayout
                style="@style/ItemStyle"
                android:layout_height="wrap_content">

                <com.tool.cs.common.widget.AvatarImageView
                    android:id="@+id/iv_avatar"
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:layout_marginTop="8.5dp"
                    android:layout_marginBottom="8.5dp"
                    app:aiv_BoarderColor="@color/gray_e"
                    app:aiv_BoarderWidth="@dimen/dp_0_5"
                    app:aiv_ShowBoarder="true"
                    app:aiv_isCircle="true"
                    tools:src="@drawable/ic_avatar_normal" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="82dp"
                    android:layout_marginLeft="82dp"
                    android:layout_marginTop="21dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_name"
                        style="@style/Content_sp15_normal"
                        tools:text="牛MO王" />

                    <TextView
                        android:id="@+id/tv_phone"
                        style="@style/Content_sp15_normal"
                        tools:text="134000000000" />
                </LinearLayout>

                <com.tool.cs.common.widget.ComplexView
                    android:id="@+id/cv_edt"
                    style="@style/Content_sp12_normal"
                    android:layout_gravity="center_vertical|end"
                    android:paddingLeft="@dimen/dp_8"
                    android:paddingTop="@dimen/dp_3"
                    android:paddingBottom="@dimen/dp_3"
                    android:text="编辑"
                    android:textColor="@android:color/white"
                    app:cvCornersRadius="@dimen/dp_20"
                    app:cvIconEnd="@drawable/ic_arrow_right"
                    app:cvIconPadding="@dimen/dp_0"
                    app:cvNormalBgColor="#E48587"
                    app:cvTintIconEnd="@android:color/white"
                    tools:ignore="RtlHardcoded,RtlSymmetry" />
            </FrameLayout>

            <com.tool.cs.common.widget.ComplexView
                android:id="@+id/cv_settings_01"
                style="@style/ItemStyle"
                android:text="@string/settings_text_01"
                android:visibility="gone"
                app:cvGravity="left"
                app:cvIconEnd="@drawable/ic_arrow_right"
                app:cvSelector="ripple" />

            <com.tool.cs.common.widget.ComplexView
                android:id="@+id/cv_settings_02"
                style="@style/ItemStyle"
                android:text="@string/settings_text_02"
                app:cvGravity="left"
                app:cvIconEnd="@drawable/ic_arrow_right"
                app:cvSelector="ripple" />

            <com.tool.cs.common.widget.ComplexView
                android:id="@+id/cv_settings_03"
                style="@style/ItemStyle"
                android:text="@string/settings_text_03"
                app:cvGravity="left"
                app:cvIconEnd="@drawable/ic_arrow_right"
                app:cvSelector="ripple" />

            <com.tool.cs.common.widget.ComplexView
                android:id="@+id/cv_settings_04"
                style="@style/ItemStyle"
                android:text="@string/settings_text_04"
                android:visibility="gone"
                app:cvGravity="left"
                app:cvIconEnd="@drawable/ic_arrow_right"
                app:cvSelector="ripple" />

            <com.tool.cs.common.widget.ComplexView
                android:id="@+id/cv_settings_05"
                style="@style/ItemStyle"
                android:text="@string/settings_text_05"
                android:visibility="gone"
                app:cvGravity="left"
                app:cvIconEnd="@drawable/ic_arrow_right"
                app:cvSelector="ripple" />

            <com.tool.cs.common.widget.ComplexView
                android:id="@+id/cv_settings_06"
                style="@style/ItemStyle"
                android:text="@string/settings_text_06"
                android:visibility="gone"
                app:cvGravity="left"
                app:cvIconEnd="@drawable/ic_arrow_right"
                app:cvSelector="ripple" />

            <com.tool.cs.common.widget.ComplexView
                android:id="@+id/cv_settings_07"
                style="@style/ItemStyle"
                android:text="@string/settings_text_07"
                app:cvGravity="left"
                app:cvIconEnd="@drawable/ic_arrow_right"
                app:cvSelector="ripple" />

            <com.tool.cs.common.widget.ComplexView
                android:id="@+id/cv_settings_08"
                style="@style/ItemStyle"
                android:text="@string/settings_text_08"
                app:cvGravity="left"
                app:cvIconEnd="@drawable/ic_arrow_right"
                app:cvSelector="ripple" />

            <com.tool.cs.common.widget.ComplexView
                android:id="@+id/cv_settings_09"
                style="@style/ItemStyle"
                android:text="@string/settings_text_09"
                app:cvGravity="left"
                app:cvIconEnd="@drawable/ic_arrow_right"
                app:cvSelector="ripple" />

            <android.support.v4.widget.Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <com.tool.cs.common.widget.ComplexView
            android:id="@+id/cv_logout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_40"
            android:layout_gravity="bottom"
            android:layout_marginLeft="81.5dp"
            android:layout_marginTop="18dp"
            android:layout_marginRight="81.5dp"
            android:layout_marginBottom="18dp"
            android:text="@string/settings_logout"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_18"
            app:cvCornersRadius="@dimen/dp_20"
            app:cvNormalBgColor="@color/colorBtnNormalBg" />
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
